--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "server",
+  "name": "mern-stack-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "salman",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.3",
-    "nodemon": "^2.0.19"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.29"
   }
 }
